--- a/declarations/examiner.tex
+++ b/declarations/examiner.tex
@@ -4,7 +4,7 @@
 \begin{center}
   \Large\textbf{CERTIFICATE BY THE EXAMINERS}
 \end{center}
-
+\addcontentsline{toc}{section}{\textbf{Certificate by the Examiners}}
 
 \begin{justify}
   \linespread{1.5}
