--- a/declarations/supervisor.tex
+++ b/declarations/supervisor.tex
@@ -4,6 +4,7 @@
 \begin{center}
   \Large\textbf{CERTIFICATE BY THE SUPERVISOR}
 \end{center}
+\addcontentsline{toc}{section}{\textbf{Certificate by the Supervisor}}
 
 
 \begin{justify}
@@ -12,9 +13,9 @@
 \\
 To the best of my knowledge and belief the report
 \begin{enumerate}[label=\roman*.]
-  \item Embodies the work of the candidate himself\vspace{-0.3cm}
-  \item Has duly been completed\vspace{-0.3cm}
-  \item Fulfills the partial requirement of the ordinance relating to the B.Tech.\ (Hons) degree of the University\vspace{-0.3cm}
+  \item Embodies the work of the candidate himself.\vspace{-0.3cm}
+  \item Has duly been completed.\vspace{-0.3cm}
+  \item Fulfills the partial requirement of the ordinance relating to the B.Tech.\ (Hons) degree of the University.\vspace{-0.3cm}
   \item Is up to the desired standard both in respect of contents and language for being referred to the examiners.
 \end{enumerate}
 \end{justify}
@@ -23,13 +24,13 @@ To the best of my knowledge and belief the report
 
 \normalsize
 \noindent
-\begin{tabular}{p{0.4\textwidth} @{\hspace{2cm}} p{0.45\textwidth}}
+\begin{tabular}{p{0.4\textwidth} @{\hspace{2.4cm}} p{0.4\textwidth}}
   &
   \centering
   \rule{4cm}{0.4pt} \\
   \textbf{Dr.\ Nachiket Tapas} \\
   Assistant Professor \\
-  Department of Computer Science \& Engineering, 
+  Depr.\ of Computer Science \& Engineering, 
   UTD, CSVTU, Bhilai (C.G.) \\
 \end{tabular}
 
@@ -45,7 +46,7 @@ To the best of my knowledge and belief the report
   \rule{4cm}{0.4pt} \\
   \textbf{Dr.\ J P Patra} \\
   HOD \\
-  Dept.\ of Computer Science \& Engineering 
+  Dept.\ of Computer Science \& Engineering. 
   UTD, CSVTU, Bhilai (C.G.)
   &
   \centering
