--- a/otherpages/titlepage.tex
+++ b/otherpages/titlepage.tex
@@ -1,4 +1,11 @@
 % Title page
+\newgeometry{
+  a4paper,
+  left=20mm,
+  right=20mm,
+  top=20mm,
+  bottom=10mm
+}
 \begin{titlepage}
     \centering
     
@@ -17,7 +24,7 @@
     \large For \\ Minor Project \\ of \par
     
     \textbf{Bachelor of Technology (Hons.)} \\\textit{in} \\\textbf{Computer Science \& Engineering} \\\textit{By}\par
-    \vspace{0.3cm}
+    \vspace{0.5cm}
     
     \textbf{Jayant Patel}\par
     \textbf{300012721061}\par 
@@ -25,7 +32,7 @@
     \textbf{7\textsuperscript{th} Sem}\par
     \textbf{Artificial Intelligence}\par
     
-    \vspace{0.3cm}
+    \vspace{0.5cm}
     
     Under the Guidance of\par
     \textbf{Dr.\ Nachiket Tapas}\par
@@ -33,7 +40,8 @@
     Department of Computer Science \& Engineering\par
     \textbf{UTD, CSVTU, Bhilai (C.G.)}\par
     
-    
+    \vspace{0.3cm}
+
     \noindent\makebox[\linewidth]{\rule{\textwidth}{0.4pt}}
     \begin{minipage}{0.17\textwidth}
       \centering
@@ -53,3 +61,4 @@
     
   
   \end{titlepage}
+\restoregeometry % chktex 1
