--- a/declarations/candidate.tex
+++ b/declarations/candidate.tex
@@ -4,7 +4,7 @@
 \begin{center}
   \Large\textbf{DECLARATION BY THE CANDIDATE}
 \end{center}
-
+\addcontentsline{toc}{section}{\textbf{Declaration by the Candidate}}
 
 \begin{justify}
   \linespread{1.5}
