--- a/otherpages/abbreviation.tex
+++ b/otherpages/abbreviation.tex
@@ -1,31 +1,19 @@
 \newpage
-\begin{minipage}{0.17\textwidth}
-  \centering
-  \includegraphics[width=\textwidth]{images/logo.png}
-\end{minipage}
-\hfil
-\large
-\begin{minipage}{0.7\textwidth}
-  \centering
-  \textbf{Department of Computer Science \& Engineering}\\
-  \textbf{University Technology Department}\\
-  \textbf{Chhattisgarh Swami Vivekanand Technical University}\\
-  \textbf{Bhilai (C.G.) 491107}
-\end{minipage}
+\input{modules/header.tex}
 
-\noindent\makebox[\linewidth]{\rule{\textwidth}{0.4pt}}
 
 \begin{center}
   \Large\textbf{LIST OF ABBREVIATIONS}
 \end{center}
+\addcontentsline{toc}{section}{\textbf{List of Abbreviations}}
 
 \vspace{0.5cm}
 
 
-\large
+\normalsize
 \begin{center}
   \renewcommand{\arraystretch}{1.5} % Adjust the vertical padding
-  \begin{tabular}{|p{4cm}|p{10cm}|}  % chktex 44
+  \begin{tabular}{|p{3cm}|p{8cm}|}  % chktex 44
     \hline % chktex 44
     \textbf{Abbreviation} & \textbf{Description} \\
     \hline % chktex 44
