--- a/otherpages/abstract.tex
+++ b/otherpages/abstract.tex
@@ -1,30 +1,15 @@
 \newpage
-\begin{minipage}{0.17\textwidth}
-  \centering
-  \includegraphics[width=\textwidth]{images/logo.png}
-\end{minipage}
-\hfil
-\large
-\begin{minipage}{0.7\textwidth}
-  \centering
-  \textbf{Department of Computer Science \& Engineering}\\
-  \textbf{University Technology Department}\\
-  \textbf{Chhattisgarh Swami Vivekanand Technical University}\\
-  \textbf{Bhilai (C.G.) 491107}
-\end{minipage}
-
-\noindent\makebox[\linewidth]{\rule{\textwidth}{0.4pt}}
+\input{modules/header.tex}
 
 \begin{center}
   \Large\textbf{ABSTRACT}
 \end{center}
-
-\vspace{0.5cm}
+\addcontentsline{toc}{section}{\textbf{Abstract}}
 
 \begin{justify}
 
-\linespread{1}
-\large One of the grand challenges of artificial general intelligence is the development of agents that can perform scientific research and discover new knowledge. Although frontier models have been employed as assistants to human scientists, for example, brainstorming ideas, writing code, or prediction tasks, they still only perform a small fraction of the scientific process. This paper gives the first complete framework to be able to carry out scientific discovery fully automatically with frontier large language models (LLMs) to carry out research on their own and present their results. We present The AI Scientist, which produces novel research ideas, writes code, performs experiments, visualizes results, describes its findings by writing a full scientific paper, and then undergoes a simulated review process for evaluation. In principle, this cycle can be repeated to iteratively develop ideas in an open-ended manner and add them to a growing archive of knowledge, mimicking the human scientific community. We illustrate the flexibility of this paradigm by applying it to three different subfields of machine learning: diffusion modeling, transformer-based language modeling, and learning dynamics. Each idea is implemented and developed into a full paper at a cost of less than \$15 per paper, showing the possibility for our framework to democratize research and significantly accelerate scientific progress. To evaluate the generated papers, we design and validate an automated reviewer, which we show achieves near-human performance in evaluating paper scores. The AI Scientist can produce papers that exceed the acceptance threshold at a top machine learning conference as judged by our automated reviewer. This will mark the beginning of a new era in scientific discovery within machine learning: bringing the transformative benefits of AI agents to the entire research process of AI itself and taking us closer to a world where endless affordable creativity and innovation can be unleashed on the world's most challenging problems.
+\linespread{1.5}
+\normalsize Developing agents capable of autonomously conducting scientific research and discovering new knowledge is a major challenge in artificial general intelligence. While large language models (LLMs) have assisted human scientists in tasks like brainstorming and coding, they handle only a fraction of the scientific process. This paper introduces The AutoIdeaFlow, the first comprehensive framework enabling LLMs to perform end-to-end scientific discovery, including idea generation, coding, experimentation, result visualization, paper writing, and simulated review. Applied to three machine learning subfields—diffusion modeling, transformer-based language modeling, and learning dynamics—The AutoIdeaFlow can develop full papers at under \$15 each, democratizing research and accelerating scientific progress. An automated reviewer evaluates these papers with near-human accuracy, demonstrating that The AutoIdeaFlow can produce work meeting top conference standards. This framework heralds a new era of AI-driven scientific discovery, fostering continuous innovation on complex global challenges.
 \vspace{1cm}
 \begin{justify}
   \textbf{Keywords:}  Automated Research, Scientific Discovery, Large Language Models, Experiment Automation, Novelty Assessment, Paper Generation, Semantic Scholar API, Automated Peer Review. 
