--- a/otherpages/titlepage.tex
+++ b/otherpages/titlepage.tex
@@ -8,7 +8,7 @@
 \begin{titlepage}
     \centering
     
-    {\Huge\bfseries AutoIdeaFlow: from Idea Generation to Paper Writeup and Review\par}
+    {\Large\bfseries AutoIdeaFlow: from Idea Generation to \\ Paper Writeup and Review\par}
     \vspace{0.5cm}
     
     {\Large\textbf{A Minor Project Report}\par}
@@ -18,7 +18,7 @@
   
     \includegraphics[width=0.2\textwidth]{images/logo.png}\par
     
-    {\Large\textbf{Chhattisgarh Swami Vivekanand Technical University\\Bhilai, India}\par}
+    {\Large\textbf{Chhattisgarh Swami Vivekanand Technical University\\Bhilai}\par}
     
     \large For \\ Minor Project \\ of \par
     
