Major project template

--- a/declarations/examiner.tex
+++ b/declarations/examiner.tex
@@ -8,24 +8,24 @@
 
 \begin{justify}
   \linespread{1.5}
-  \normalsize 
-The project report entitled \textbf{\textit{``AUTOIDEAFLOW FROM IDEA GENERATION TO PAPER WRITEUP AND REVIEW''}} has been examined by the undersigned as a part of the examination of Bachelor of Technology (Hons.) in the faculty of Computer Science \& Engineering of Chhattisgarh Swami Vivekanand Technical University, Bhilai.
+  \normalsize
+  The project report entitled \textbf{\textit{``AUTOIDEAFLOW FROM IDEA GENERATION TO PAPER WRITEUP AND REVIEW''}} has been examined by the undersigned as a part of the examination of Bachelor of Technology (Hons.) in the faculty of Computer Science \& Engineering of Chhattisgarh Swami Vivekanand Technical University, Bhilai.
 \end{justify}
 
 
 \vspace{5cm}
 
-\normalsize 
+\normalsize
 
 \noindent
 \begin{tabular}{p{0.4\textwidth} @{\hspace{2cm}} p{0.4\textwidth}}
   \centering
-  \rule{4cm}{0.4pt} \\
+  \rule{4cm}{0.4pt}          \\
   \textbf{Internal Examiner} \\
-  \textbf{Date:} \hspace{2.7cm}
-  &
+  \raggedright \hspace{1.55cm} \textbf{Date:}
+   &
   \centering
-  \rule{4cm}{0.4pt} \\
+  \rule{4cm}{0.4pt}          \\
   \textbf{External Examiner} \\
-  \textbf{Date:} \hspace{2.8cm}
+  \raggedright \hspace{1.55cm} \textbf{Date:}
 \end{tabular}
