--- a/otherpages/abstract.tex
+++ b/otherpages/abstract.tex
@@ -9,9 +9,9 @@
 \begin{justify}
 
 \linespread{1.5}
-\normalsize Developing agents capable of autonomously conducting scientific research and discovering new knowledge is a major challenge in artificial general intelligence. While large language models (LLMs) have assisted human scientists in tasks like brainstorming and coding, they handle only a fraction of the scientific process. This paper introduces The AutoIdeaFlow, the first comprehensive framework enabling LLMs to perform end-to-end scientific discovery, including idea generation, coding, experimentation, result visualization, paper writing, and simulated review. Applied to three machine learning subfields—diffusion modeling, transformer-based language modeling, and learning dynamics—The AutoIdeaFlow can develop full papers at under \$15 each, democratizing research and accelerating scientific progress. An automated reviewer evaluates these papers with near-human accuracy, demonstrating that The AutoIdeaFlow can produce work meeting top conference standards. This framework heralds a new era of AI-driven scientific discovery, fostering continuous innovation on complex global challenges.
+\normalsize Lack of attention while reading is a critical challenge in education, often leading to reduced comprehension and learning outcomes. To address this, we propose a novel real-time system that monitors reader attention by combining object detection and gaze estimation. Our method uses YOLO for accurate book detection and integrates AWS Rekognition to assess gaze direction, determining whether the reader is focused on the book. This lightweight, cloud-assisted approach enables efficient, scalable deployment. The system has strong potential in personalized education, enabling adaptive learning platforms that respond to student engagement levels.
 \vspace{1cm}
 \begin{justify}
-  \textbf{Keywords:}  Automated Research, Scientific Discovery, Large Language Models, Experiment Automation, Novelty Assessment, Paper Generation, Semantic Scholar API, Automated Peer Review. 
+  \textbf{Keywords:}  Reader attention, YOLO, AWS Rekognition, gaze detection, smart learning, real-time monitoring. 
 \end{justify}
 \end{justify}
