--- a/otherpages/titlepage.tex
+++ b/otherpages/titlepage.tex
@@ -6,58 +6,77 @@
   bottom=10mm
 }
 \begin{titlepage}
+  \centering
+  
+  {\Huge\bfseries AutoIdeaFlow: from Idea Generation to Paper Writeup and Review\par}
+  \vspace{0.5cm}
+  
+  {\Large\textbf{A Major Project Report}\par}
+  
+  {\Large Submitted To\par}
+  \vspace{0.4cm}
+  
+  \includegraphics[width=0.2\textwidth]{images/logo.png}\par
+  
+  {\Large\textbf{Chhattisgarh Swami Vivekanand Technical University\\Bhilai, India}\par}
+  
+  \large For \\ Major Project \\ of \par
+  
+  \textbf{Bachelor of Technology (Hons.)} \\\textit{in} \\\textbf{Computer Science \& Engineering} \\\textit{By}\par
+  \vspace{0.5cm}
+  
+  \begin{minipage}{0.33\textwidth}
     \centering
-    
-    {\Large\bfseries AutoIdeaFlow: from Idea Generation to \\ Paper Writeup and Review\par}
-    \vspace{0.5cm}
-    
-    {\Large\textbf{A Minor Project Report}\par}
-  
-    {\Large Submitted To\par}
-    \vspace{0.4cm}
-  
-    \includegraphics[width=0.2\textwidth]{images/logo.png}\par
-    
-    {\Large\textbf{Chhattisgarh Swami Vivekanand Technical University\\Bhilai}\par}
-    
-    \large For \\ Minor Project \\ of \par
-    
-    \textbf{Bachelor of Technology (Hons.)} \\\textit{in} \\\textbf{Computer Science \& Engineering} \\\textit{By}\par
-    \vspace{0.5cm}
-    
+    \textbf{Ashish Sinha}\par
+    \textbf{300012721048}\par 
+    \textbf{CB4646}\par
+    \textbf{8\textsuperscript{th} Sem}\par
+    \textbf{Artificial Intelligence}\par
+  \end{minipage}%
+  \begin{minipage}{0.33\textwidth}
+    \centering
     \textbf{Jayant Patel}\par
     \textbf{300012721061}\par 
     \textbf{CB4646}\par
-    \textbf{7\textsuperscript{th} Sem}\par
+    \textbf{8\textsuperscript{th} Sem}\par
     \textbf{Artificial Intelligence}\par
-    
-    \vspace{0.5cm}
-    
-    Under the Guidance of\par 
-    \textbf{Dr.\ Nachiket Tapas}\par
-    Assistant Professor\par 
-    Department of Computer Science \& Engineering\par
-    \textbf{UTD, CSVTU, Bhilai (C.G.)}\par
-    
-    \vspace{0.3cm}
-
-    \noindent\makebox[\linewidth]{\rule{\textwidth}{0.4pt}}
-    \begin{minipage}{0.17\textwidth}
-      \centering
-      \includegraphics[width=\textwidth]{images/logo.png}
-    \end{minipage}
-    \hfil
-    \begin{minipage}{0.7\textwidth}
-      \centering
-      \textbf{Department of Computer Science \& Engineering}\\
-      \textbf{University Teaching Department}\\
-      \textbf{Chhattisgarh Swami Vivekanand Technical University}\\
-      \textbf{Bhilai (C.G.) 491107}
-    \end{minipage}
-    \noindent\makebox[\linewidth]{\rule{\textwidth}{0.4pt}}
-    \textbf{Session: 2024 --\ 25}
-    \noindent\makebox[\linewidth]{\rule{\textwidth}{0.4pt}} 
-    
+  \end{minipage}%
+  \begin{minipage}{0.33\textwidth}
+    \centering
+    \textbf{Himanshu Sahu}\par
+    \textbf{300012721018}\par 
+    \textbf{CB4646}\par
+    \textbf{8\textsuperscript{th} Sem}\par
+    \textbf{Artificial Intelligence}\par
+  \end{minipage}
   
-  \end{titlepage} 
+  \vspace{0.5cm}
+  
+  Under the Guidance of\par
+  \textbf{Dr.\ Toran Verma}\par
+  Associate Professor\par 
+  Department of Computer Science \& Engineering\par
+  \textbf{UTD, CSVTU, Bhilai (C.G.)}\par
+  
+  \vspace{0.3cm}
+  
+  \noindent\makebox[\linewidth]{\rule{\textwidth}{0.4pt}}
+  \begin{minipage}{0.17\textwidth}
+    \centering
+    \includegraphics[width=\textwidth]{images/logo.png}
+  \end{minipage}
+  \hfil
+  \begin{minipage}{0.7\textwidth}
+    \centering
+    \textbf{Department of Computer Science \& Engineering}\\
+    \textbf{University Teaching Department}\\
+    \textbf{Chhattisgarh Swami Vivekanand Technical University}\\
+    \textbf{Bhilai (C.G.) 491107}
+  \end{minipage}
+  \noindent\makebox[\linewidth]{\rule{\textwidth}{0.4pt}}
+  \textbf{Session: 2024 --\ 2025}
+  \noindent\makebox[\linewidth]{\rule{\textwidth}{0.4pt}}
+  
+  
+\end{titlepage}
 \restoregeometry % chktex 1
