--- a/declarations/acknowledgement.tex
+++ b/declarations/acknowledgement.tex
@@ -1,29 +1,55 @@
 \input{modules/header}
+\vspace{-0.5cm}
 
 \begin{center}
   \Large\textbf{ACKNOWLEDGEMENT}
 \end{center}
 \addcontentsline{toc}{section}{\textbf{Acknowledgement}}
-
+\vspace{-0.5cm}
 \begin{justify}
   \linespread{1.5}
-  \normalsize 
- Working for this project has been a great experience for us. There were moments of anxiety, when we could not solve a problem for the several days. But we have enjoyed every bit of process and are thankful to all people associated with us during this period we convey our sincere thanks to our project guide \textbf{Dr.\ Nachiket Tapas} and co-guide \textbf{Mr.\ Abhinaw Jagtap} for providing me all sorts of facilities. His support and guidance helped us to carry out the project. We owe a great dept.\ of his gratitude for his constant advice, support, cooperation \& encouragement throughout the project we would also like to express our deep gratitude to respected \textbf{Dr.\ J P Patra} (Head of Department) for his ever helping and support. We also pay special thanks for his helpful solution and comments enriched by his experience, which improved our ideas for betterment of the project. We would also like to express our deep gratitude to respected \textbf{Dr.\ P K Ghosh} (Director) and college management for providing an educational ambience. It will be our pleasure to acknowledge, utmost cooperation and valuable suggestions from time to time given by our staff members of our department, to whom we owe our entire computer knowledge and also we would like to thank all those persons who have directly or indirectly helped us by providing books and computer peripherals and other necessary amenities which helped us in the development of this project which would otherwise have not been possible.
+  \normalsize
+  Working for this project has been a great experience for us. There were moments of anxiety, when we could not solve a problem for the several days. But we have enjoyed every bit of process and are thankful to all people associated with us during this period we convey our sincere thanks to our project guide \textbf{Dr.\ Nachiket Tapas} and co-guide \textbf{Mr.\ Abhinaw Jagtap} for providing me all sorts of facilities. His support and guidance helped us to carry out the project. We owe a great dept.\ of his gratitude for his constant advice, support, cooperation \& encouragement throughout the project we would also like to express our deep gratitude to respected \textbf{Dr.\ J P Patra} (Head of Department) for his ever helping and support. We also pay special thanks for his helpful solution and comments enriched by his experience, which improved our ideas for betterment of the project. We would also like to express our deep gratitude to respected \textbf{Dr.\ P K Ghosh} (Director) and college management for providing an educational ambience. It will be our pleasure to acknowledge, utmost cooperation and valuable suggestions from time to time given by our staff members of our department, to whom we owe our entire computer knowledge and also we would like to thank all those persons who have directly or indirectly helped us by providing books and computer peripherals and other necessary amenities which helped us in the development of this project which would otherwise have not been possible.
 \end{justify}
 
 
-\vspace{2cm}
 
-
-\normalsize 
+\vspace{0.5cm}
+\normalsize
 
 \noindent
-\begin{tabular}{p{0.4\textwidth} @{\hspace{2.4cm}} p{0.4\textwidth}}
-  &
+\begin{tabular}{p{0.4\textwidth} @{\hspace{2cm}} p{0.45\textwidth}}
+   &
   \centering
-  \rule{4cm}{0.4pt} \\
+  \rule{4cm}{0.4pt}     \\
+  \textbf{Ashish Sinha} \\
+  Roll No: 300012721048 \\
+  Enroll No: CB4646     \\
+  Semester: 8\textsuperscript{th} (CSE)
+\end{tabular}
+
+\vspace{0.5cm}
+
+\noindent
+\begin{tabular}{p{0.4\textwidth} @{\hspace{2cm}} p{0.45\textwidth}}
+   &
+  \centering
+  \rule{4cm}{0.4pt}     \\
   \textbf{Jayant Patel} \\
   Roll No: 300012721061 \\
-  Enroll No: CB4646 \\
-  Semester: 7\textsuperscript{th} (CSE (AI)) \\
+  Enroll No: CB4646     \\
+  Semester: 8\textsuperscript{th} (CSE)
+\end{tabular}
+
+\vspace{0.5cm}
+
+\noindent
+\begin{tabular}{p{0.4\textwidth} @{\hspace{2cm}} p{0.45\textwidth}}
+   &
+  \centering
+  \rule{4cm}{0.4pt}      \\
+  \textbf{Himanshu Sahu} \\
+  Roll No: 300012721018  \\
+  Enroll No: CB4646      \\
+  Semester: 8\textsuperscript{th} (CSE)
 \end{tabular}
