--- a/declarations/candidate.tex
+++ b/declarations/candidate.tex
@@ -8,24 +8,49 @@
 
 \begin{justify}
   \linespread{1.5}
-  \normalsize 
-  We the undersigned solemnly declare that the Minor project report entitled \textbf{\textit{``AUTOIDEAFLOW FROM IDEA GENERATION TO PAPER WRITEUP AND REVIEW''}} is based our own work carried out during the course of our study under the supervision of \textbf{\textit{Dr.\ Nachiket Tapas}} and \textbf{\textit{Mr.\ Abhinaw Jagtap}}.
-\\
-We assert that the statements made and conclusions drawn are an outcome of the project work. We further declare that to the best of our knowledge and belief that the report does not contain any part of any work which has been submitted for the award of any other degree/diploma/certificate in this University/Deemed university of India or any other country.
+  \normalsize
+  We the undersigned solemnly declare that the Minor project report entitled \textbf{\textit{``AUTOIDEAFLOW FROM IDEA GENERATION TO PAPER WRITEUP AND REVIEW''}} is based our own work carried out during the course of our study under the supervision of \textbf{\textit{Dr.\ Toran Verma}}.
+  \\
+  We assert that the statements made and conclusions drawn are an outcome of the project work. We further declare that to the best of our knowledge and belief that the report does not contain any part of any work which has been submitted for the award of any other degree/diploma/certificate in this University/Deemed university of India or any other country.
 \end{justify}
 
 
-\vspace{5cm}  
-\normalsize  
+\vspace{1.5cm}
+\normalsize
 
 \noindent
 \begin{tabular}{p{0.4\textwidth} @{\hspace{2cm}} p{0.45\textwidth}}
-  &
+   &
   \centering
-  \rule{4cm}{0.4pt} \\
+  \rule{4cm}{0.4pt}     \\
+  \textbf{Ashish Sinha} \\
+  Roll No: 300012721048 \\
+  Enroll No: CB4646     \\
+  Semester: 8\textsuperscript{th} (CSE)
+\end{tabular}
+
+\vspace{1.5cm}
+
+\noindent
+\begin{tabular}{p{0.4\textwidth} @{\hspace{2cm}} p{0.45\textwidth}}
+   &
+  \centering
+  \rule{4cm}{0.4pt}     \\
   \textbf{Jayant Patel} \\
   Roll No: 300012721061 \\
-  Enroll No: CB4646 \\
-  Semester: 7\textsuperscript{th} (CSE) 
+  Enroll No: CB4646     \\
+  Semester: 8\textsuperscript{th} (CSE)
 \end{tabular}
- 
+
+\vspace{1.5cm}
+
+\noindent
+\begin{tabular}{p{0.4\textwidth} @{\hspace{2cm}} p{0.45\textwidth}}
+   &
+  \centering
+  \rule{4cm}{0.4pt}      \\
+  \textbf{Himanshu Sahu} \\
+  Roll No: 300012721018  \\
+  Enroll No: CB4646      \\
+  Semester: 8\textsuperscript{th} (CSE)
+\end{tabular}
