--- a/declarations/candidate.tex
+++ b/declarations/candidate.tex
@@ -9,7 +9,7 @@
 \begin{justify}
   \linespread{1.5}
   \normalsize
-  We the undersigned solemnly declare that the Minor project report entitled \textbf{\textit{``AUTOIDEAFLOW FROM IDEA GENERATION TO PAPER WRITEUP AND REVIEW''}} is based our own work carried out during the course of our study under the supervision of \textbf{\textit{Dr.\ Toran Verma}}.
+  We the undersigned solemnly declare that the major project report entitled \textbf{\textit{``AI POWERED ATTENTION MONITORING SYSTEM FOR BOOK READING''}} is based our own work carried out during the course of our study under the supervision of \textbf{\textit{Dr.\ Toran Verma}}.
   \\
   We assert that the statements made and conclusions drawn are an outcome of the project work. We further declare that to the best of our knowledge and belief that the report does not contain any part of any work which has been submitted for the award of any other degree/diploma/certificate in this University/Deemed university of India or any other country.
 \end{justify}
@@ -25,7 +25,7 @@
   \rule{4cm}{0.4pt}     \\
   \textbf{Ashish Sinha} \\
   Roll No: 300012721048 \\
-  Enroll No: CB4646     \\
+  Enroll No: CB4633     \\
   Semester: 8\textsuperscript{th} (CSE)
 \end{tabular}
 
@@ -51,6 +51,6 @@
   \rule{4cm}{0.4pt}      \\
   \textbf{Himanshu Sahu} \\
   Roll No: 300012721018  \\
-  Enroll No: CB4646      \\
+  Enroll No: CB4596      \\
   Semester: 8\textsuperscript{th} (CSE)
 \end{tabular}
