--- a/declarations/examiner.tex
+++ b/declarations/examiner.tex
@@ -9,7 +9,7 @@
 \begin{justify}
   \linespread{1.5}
   \normalsize
-  The project report entitled \textbf{\textit{``AUTOIDEAFLOW FROM IDEA GENERATION TO PAPER WRITEUP AND REVIEW''}} has been examined by the undersigned as a part of the examination of Bachelor of Technology (Hons.) in the faculty of Computer Science \& Engineering of Chhattisgarh Swami Vivekanand Technical University, Bhilai.
+  The project report entitled \textbf{\textit{``AI POWERED ATTENTION MONITORING SYSTEM FOR BOOK READING''}} has been examined by the undersigned as a part of the examination of Bachelor of Technology (Hons.) in the faculty of Computer Science \& Engineering of Chhattisgarh Swami Vivekanand Technical University, Bhilai.
 \end{justify}
 
 
@@ -22,10 +22,10 @@
   \centering
   \rule{4cm}{0.4pt}          \\
   \textbf{Internal Examiner} \\
-  \raggedright \hspace{1.55cm} \textbf{Date:}
+  \raggedright \hspace{1.60cm} \textbf{Date:}
    &
   \centering
   \rule{4cm}{0.4pt}          \\
   \textbf{External Examiner} \\
-  \raggedright \hspace{1.55cm} \textbf{Date:}
+  \raggedright \hspace{1.57cm} \textbf{Date:}
 \end{tabular}
