--- a/declarations/supervisor.tex
+++ b/declarations/supervisor.tex
@@ -9,7 +9,7 @@
 
 \begin{justify}
   \linespread{1.5}
-  \normalsize This is to certify that the Minor project report entitled \textbf{\textit{``AUTOIDEAFLOW FROM IDEA GENERATION TO PAPER WRITEUP AND REVIEW''}} is a record of project work carried out under my guidance and supervision for the fulfillment of the award of degree of Bachelor of Technology (Hons.) in the faculty of Computer Science \& Engineering of Chhattisgarh Swami Vivekananda Technical University, Bhilai (C.G.) India.
+  \normalsize This is to certify that the major project report entitled \textbf{\textit{``AI POWERED ATTENTION MONITORING SYSTEM FOR BOOK READING''}} is a record of project work carried out under my guidance and supervision for the fulfillment of the award of degree of Bachelor of Technology (Hons.) in the faculty of Computer Science \& Engineering of Chhattisgarh Swami Vivekananda Technical University, Bhilai (C.G.) India.
   \\
   To the best of my knowledge and belief the report
   \begin{enumerate}[label=\roman*.]
@@ -34,8 +34,11 @@
   UTD, CSVTU, Bhilai (C.G.) \\
 \end{tabular}
 
-\vspace{2cm}
 
+\begin{center}
+  \normalsize\textbf{Forwared to \\ Chhattisgarh Swami Vivekanand Technical University, Bhilai (C.G.)}
+\end{center}
+\vspace{2cm}
 
 \noindent
 \begin{tabular}{p{0.4\textwidth} @{\hspace{2cm}} p{0.45\textwidth}}
@@ -52,7 +55,3 @@
   Director                    \\
   UTD, CSVTU, Bhilai (C.G.)   \\
 \end{tabular}
-
-\begin{center}
-  \normalsize\textbf{Forwared to \\ Chhattisgarh Swami Vivekanand Technical University, Bhilai (C.G.)}
-\end{center}
