--- a/otherpages/titlepage.tex
+++ b/otherpages/titlepage.tex
@@ -8,7 +8,7 @@
 \begin{titlepage}
   \centering
   
-  {\Huge\bfseries AutoIdeaFlow: from Idea Generation to Paper Writeup and Review\par}
+  {\LARGE\bfseries AI POWERED ATTENTION MONITORING SYSTEM FOR BOOK READING\par}
   \vspace{0.5cm}
   
   {\Large\textbf{A Major Project Report}\par}
@@ -29,7 +29,7 @@
     \centering
     \textbf{Ashish Sinha}\par
     \textbf{300012721048}\par 
-    \textbf{CB4646}\par
+    \textbf{CB4633}\par
     \textbf{8\textsuperscript{th} Sem}\par
     \textbf{Artificial Intelligence}\par
   \end{minipage}%
@@ -45,7 +45,7 @@
     \centering
     \textbf{Himanshu Sahu}\par
     \textbf{300012721018}\par 
-    \textbf{CB4646}\par
+    \textbf{CB4596}\par
     \textbf{8\textsuperscript{th} Sem}\par
     \textbf{Artificial Intelligence}\par
   \end{minipage}
